--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^2.3.0"
   }
 }
